--- a/styles/banner.module.css
+++ b/styles/banner.module.css
@@ -1,8 +1,7 @@
 .banner {
-  padding-top: 15px;
   position: absolute;
   width: 100%;
-  height: 100vh;
+  height: 450px;
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -14,7 +13,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 15%;
+  height: 20%;
   object-fit: cover;
 }
 .text {
@@ -24,9 +23,10 @@
   width: 100%;
   height: 100%;
   background: #fff;
-  font-size: 12vw;
-  font-weight: 1000;
+  font-size: 9vw;
+  font-weight: 900;
   text-align: center;
+  vertical-align: top;
   text-transform: uppercase;
   color: rgb(0, 0, 0);
   line-height: 10vh;
