--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,19 @@ a {
   box-sizing: border-box;
 }
 
+.formBox {
+  direction: rtl;
+  margin-top: 20px;
+  padding-top: 15px;
+  background-color: blanchedalmond;
+  min-height: 500px;
+}
+.fileInput {
+  opacity: 0;
+  width: 0.1px;
+  height: 0.1px;
+  z-index: -1;
+}
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
